# wscpp

./: .gitignore  .kateconfig  CMakeLists.txt  b64.cpp  b64.h  clang-amd64.cmake  gssexcept.h  sha1.cpp  sha1.h  wsclient-impl.h  wsclient-test.cpp  wsclient.cpp  wscpp.h  wscppConfig.cmake.in  wsexcept.cpp  wsexcept.h  wsserver-impl.h  wsserver-test.cpp  wsserver.cpp
.github/workflows/: build-linux.yml  build-windows-static.yml  build-windows.yml
src/: b64.cpp  b64.h  config.h.in  mod.cpp  sha1.cpp  sha1.h  ssl.cpp  wsclient-impl.h  wsclient-test.cpp  wsclient-test2.cpp  wsclient.cpp  wscpp.h  wsexcept.cpp  wsexcept.h  wsserver-impl.h  wsserver-test.cpp  wsserver.cpp
